[LFC][Integration] imported/blink/fast/shapes/crash-caused-by-dirtying-a-shape-while-computing-it-requires-a-long-filename-to-crash.html crashes on iOS https://bugs.webkit.org/show_bug.cgi?id=206151

Reviewed by Zalan Bujtas.

* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::createLayoutBox):

LFC doesn't expect line break boxes with float set (other layout systems just ignore it).



Canonical link: https://commits.webkit.org/219260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254427 268f45cc-cd09-0410-ab3c-d52691b4dbfc